[gd_scene load_steps=10 format=2]

[ext_resource path="res://Login.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Resources/Comic_Sans.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/Title.png" type="Texture" id=4]
[ext_resource path="res://Resources/27.png" type="Texture" id=5]
[ext_resource path="res://Resources/28.png" type="Texture" id=6]
[ext_resource path="res://Resources/49.png" type="Texture" id=7]
[ext_resource path="res://Resources/44.png" type="Texture" id=8]
[ext_resource path="res://Resources/51.png" type="Texture" id=9]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Login_Button" type="Button" parent="."]
margin_left = 57.7898
margin_top = 461.573
margin_right = 238.79
margin_bottom = 536.573
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Register_Button" type="Button" parent="."]
margin_left = 285.152
margin_top = 460.315
margin_right = 472.152
margin_bottom = 536.315
text = "Register"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text1" type="RichTextLabel" parent="."]
anchor_top = -0.00113386
anchor_bottom = -0.00113386
margin_left = 28.8221
margin_top = 171.969
margin_right = 195.823
margin_bottom = 222.969
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/bold_italics_font = ExtResource( 3 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[color=#0000ff][b]USERNAME:[/b][/color]"
text = "USERNAME:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text6" type="RichTextLabel" parent="."]
anchor_top = -0.00113386
anchor_bottom = -0.00113386
margin_left = 11.479
margin_top = 662.066
margin_right = 311.479
margin_bottom = 713.066
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/bold_italics_font = ExtResource( 3 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[color=#ff4136]alpha_1.2[/color]
"
text = "alpha_1.2
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text2" type="RichTextLabel" parent="."]
anchor_top = -0.00113386
anchor_bottom = -0.00113386
margin_left = 29.6158
margin_top = 242.608
margin_right = 196.616
margin_bottom = 293.608
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/bold_italics_font = ExtResource( 3 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[color=#0000ff][b]PASSWORD:[/b][/color]"
text = "PASSWORD:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text3" type="RichTextLabel" parent="."]
anchor_top = -0.00113386
anchor_bottom = -0.00113386
margin_left = 20.2509
margin_top = 351.481
margin_right = 187.251
margin_bottom = 402.481
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/bold_italics_font = ExtResource( 3 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[color=#ff0000][b]IP DEL SERVER:[/b][/color]"
text = "IP DEL SERVER:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Password" type="TextEdit" parent="."]
margin_left = 179.462
margin_top = 230.502
margin_right = 429.462
margin_bottom = 275.502
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="TextEdit" parent="."]
margin_left = 179.462
margin_top = 162.502
margin_right = 429.462
margin_bottom = 207.502
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text4" type="Label" parent="."]
margin_left = 487.208
margin_top = 523.056
margin_right = 707.208
margin_bottom = 611.056
text = "Per l'aiuto nella 
creazione delle carte"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text5" type="Label" parent="."]
margin_left = 650.527
margin_top = 518.54
margin_right = 887.527
margin_bottom = 614.54
text = "Per le musiche
 del gioco"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Server_IP" type="TextEdit" parent="."]
margin_left = 186.118
margin_top = 343.121
margin_right = 435.118
margin_bottom = 388.121
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="."]
margin_left = 19.3456
margin_top = 581.276
margin_right = 634.346
margin_bottom = 666.276
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="."]
position = Vector2( 851.427, 46.8619 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="Title" type="Sprite" parent="."]
position = Vector2( 311.398, 61.6639 )
scale = Vector2( 0.750183, 0.731121 )
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 475.495
margin_top = 111.977
margin_right = 1005.5
margin_bottom = 155.977
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[shake rate=5 level=10][rainbow freq=0.5 sat=50 val=10]Programmato con tanto amore dal BMCards Team:[/rainbow][/shake]"
text = "Programmato con tanto amore dal BMCards Team:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 612.819
margin_top = 356.412
margin_right = 880.819
margin_bottom = 455.412
bbcode_enabled = true
bbcode_text = "[shake rate=5 level=10][rainbow freq=0.2 sat=10 val=20]Si ringraziano anche:[/rainbow][/shake]"
text = "Si ringraziano anche:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="28" type="Sprite" parent="."]
position = Vector2( 679.343, 251.904 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 6 )

[node name="44" type="Sprite" parent="."]
position = Vector2( 535.16, 253.358 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 8 )

[node name="30" type="Sprite" parent="."]
position = Vector2( 822.504, 253.417 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 9 )

[node name="27" type="Sprite" parent="."]
position = Vector2( 595.884, 464.162 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="49" type="Sprite" parent="."]
position = Vector2( 768.098, 464.524 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )

[node name="Button" type="Button" parent="."]
margin_left = 725.605
margin_top = 603.703
margin_right = 887.605
margin_bottom = 682.703
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0.0117647, 0.0117647, 1 )
text = "CHIUDI IL GIOCO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Button" parent="."]
margin_left = 526.0
margin_top = 606.0
margin_right = 686.0
margin_bottom = 683.0
custom_fonts/font = ExtResource( 3 )
text = "Come si gioca?"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Login_Button" to="." method="_on_Login_Button_pressed"]
[connection signal="pressed" from="Register_Button" to="." method="_on_Register_Button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_Tutorial_pressed"]
